<?xml version="1.0" encoding="utf-8"?>
<FrameLayout     xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        tools:context=".MainActivity">
        <RelativeLayout
            android:id="@+id/headerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pupusa_header_1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="@dimen/header_margin"
                android:layout_alignParentStart="true"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pupusa_header"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/header_margin"
            />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/quesoIzquierda"
                style="@style/AppTheme.botonPupusaIzquierdo"
                android:text="@string/frijol_con_queso"/>

            <Button
                android:id="@+id/quesoDerecha"
                style="@style/AppTheme.botonPupusaDerecho"
                android:text="@string/frijol_con_queso"
            />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/frijolIzquierda"
                style="@style/AppTheme.botonPupusaIzquierdo"
                android:text="@string/pupusa_queso"/>

            <Button
                android:id="@+id/frijolDerecha"
                style="@style/AppTheme.botonPupusaDerecho"
                android:text="@string/pupusa_queso"
            />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/revueltasIzquierda"
                style="@style/AppTheme.botonPupusaIzquierdo"
                android:text="@string/revueltas"/>

            <Button
                android:id="@+id/revueltasDerecha"
                style="@style/AppTheme.botonPupusaDerecho"
                android:text="@string/revueltas"
            />
        </RelativeLayout>
        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/enviar_orden"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="@color/primaryButtonColor"

        />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9F000000"
        android:visibility="gone"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="#fff"
            android:layout_marginHorizontal="50dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="Loading..."
                      android:textColor="#000"
                      android:textAlignment="center"
                      android:textSize="50sp"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>